# rsimagetag

./: Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
docs/: book.toml
docs/book/: 404.html  concepts.html  design-decisions.html  future-ideas.html  getting-started.html  installation.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-3faeda04.js  searchindex-855b818a.js  toc-5866268f.js  toc.html
docs/src/: SUMMARY.md  concepts.md  design-decisions.md  desktop-integration.md  future-ideas.md  getting-started.md  installation.md  introduction.md
src/: cli.rs  db.rs  icon.rs  lib.rs  main.rs
tests/: app_tests.rs
