[package]
name = "rsimagetag"
version = "0.1.1"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
eframe = { version = "0.31", features = ["default"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
walkdir = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
