[package]
name = "rsimagetag"
version = "0.1.3"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Tag images easily"
license = "MIT"
repository = "https://github.com/veltzer/rsimagetag"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
eframe = { version = "0.31", features = ["default"] }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
redb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
